--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/golang:1.21.4
+      - image: golang:1.21.1-bookworm
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
