--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,4 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build
-      - docker_image:
-        requires:
-          - build
-
+      - docker_image
