--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
+orbs:
+  docker: circleci/docker@2.4.0
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
@@ -37,13 +38,14 @@ jobs:
 
   docker_image:
     docker:
-      - image: cimg/base:2023.11
+      - image: cimg/base:stable
     steps:
       - checkout
-      - run:
-          name: Build docker image
-          working_directory: app/
-          command: docker build -t dce-challenge .
+      - docker/build:
+        image: dce-challenge
+        tag: latest
+        path: app/
+        dockerfile: Dockerfile
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
