--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - docker/build:
           image: dce-challenge
           tag: latest
-          path: /app
+          path: app/
 
 
 # Invoke jobs via workflows
