Added orb docker for container  build - fix 3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
+      - setup_remote_docker
       - docker/build:
           image: dce-challenge
           tag: latest
