--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ jobs:
       - checkout
       - setup_remote_docker
       - docker/build:
+          working_directory: app/
           image: dce-challenge
           tag: latest
-          path: app/
 
 
 # Invoke jobs via workflows
