Added orb docker for container  build - fix 6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
       - docker/build:
           image: dce-challenge
           tag: latest
+          use-buildkit: true
 
 
 # Invoke jobs via workflows
