Added orb docker for container  build - fix 7

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
       - docker/build:
           image: dce-challenge
           tag: latest
+          path: app/
           use-buildkit: true
 
 
