--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run:
-          name: Change directory
-          command: cd app/
       - docker/build:
+          docker-context: app/
           image: dce-challenge
           tag: latest
           path: app/
