Added container push - add family name (taskdef)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
 
       - aws-ecs/update_service:
           cluster: ${CLUSTER_NAME}
+          family: 'app'
           requires:
             - aws-ecr/build-and-push-image
 
