--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
 
       - aws-ecr/tag_image:
           repo: ${AWS_ECR_REPO_URI}
-          source_tag: 'dce-challenge:latest'
+          source_tag: 'docker.io/library/dce-challenge:latest'
 
       - aws-ecs/update_service:
           cluster: ${CLUSTER_NAME}
