Added aws cli setup fix 5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,12 +55,12 @@ jobs:
       - aws-cli/setup
 
       - aws-ecr/tag_image:
-          repo: ${AWS_ECR_REPOSITORY_NAME}
+          repo: circleci-dev-backend
           source_tag: 'dce-challenge:latest'
 
       - aws-ecr/push_image:
           region: ${AWS_DEFAULT_REGION}
-          repo: ${AWS_ECR_REPOSITORY_NAME}
+          repo: circleci-dev-backend
           tag: latest
 
       - aws-ecs/update_service:
