Sequential exec build, docker_image job fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,14 +66,13 @@ jobs:
           cluster: ${CLUSTER_NAME}
           family: 'app'
           skip_task_definition_registration: true
-    requires:
-      - build
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  dev:
     jobs:
       - build
-      - docker_image
+      - docker_image:
+          requires:
+            - build
